<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Campus Booking</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="telephone_number">Telephone Number</string>
    <string name="verification_code">Verification Code</string>
    <string name="send">Send</string>
    <string name="login_or_register">Login or Register</string>
    <string name="or">or</string>
    <string name="login_with_password">Login with Password</string>
    <string name="login_failed">"Login failed"</string>
    <string name="forgot_password">Forgot password</string>
    <string name="username_email_phone">Username/Email/Phone</string>
    <string name="logout">Logout</string>
    <string name="opening">Opening</string>
    <string name="closing">Closing</string>
    <string name="no_description">No description</string>
    <string name="network_error">Network error.</string>
    <string name="select_a_seat">Select a seat</string>
    <string name="the_selected_seat_is_unavailable">The selected seat is unavailable.</string>
    <string name="the_selected_seat_is_occupied">The selected seat is occupied.</string>
    <string name="booking">Booking</string>
    <string name="leave">Leave</string>
    <string name="find">Find</string>
    <string name="finish">Finish</string>
    <string name="you_have_an_order_in_progress">You have an order in progress.</string>
    <string name="check">Check</string>
    <string name="check_in_before">"Check in before "</string>
    <string name="otherwise_the_order_will_expire">, otherwise the order will expire.</string>
    <string name="scan">Scan</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="the_order_is_expired">The order is expired.</string>
    <string name="comment">Comment</string>
    <string name="order_details">Order Details</string>
    <string name="invalid_qr_code">Invalid QR code.</string>
    <string name="checking_in">Checking in…</string>
    <string name="retry">Retry</string>
    <string name="your_location_is_needed_to_check_in">Your Location is needed to go on. Please check if your location service is started.</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="canceled">Canceled.</string>
    <string name="processing">Processing…</string>
    <string name="scan_canceled">Scan canceled.</string>
    <string name="invalid_order">Invalid order.</string>
    <string name="check_in_failed">Check in failed</string>
    <string name="check_in_canceled">Check in canceled.</string>
    <string name="start_to_check_in">Start to check in…</string>
    <string name="bad">Bad</string>
    <string name="poor">Poor</string>
    <string name="fair">Fair</string>
    <string name="good">Good</string>
    <string name="very_good">Very good</string>
    <string name="excellent">Excellent</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="not_in_service">Not in service</string>

    <string name="preference_file_key" translatable="false">cn.edu.gdou.jakec.campusbooking.PREFERENCE_FILE_KEY</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <string name="enable">Enable</string>
    <string name="status">Status</string>
    <string name="qr_code">QR Code</string>
    <string name="disable">Disable</string>
    <string name="edit">Edit</string>
    <string name="create">Create</string>
    <string name="book">Book</string>
    <string name="tab_anywhere_to_close">Tab anywhere to close.</string>
    <string name="kick">Kick</string>
    <string name="is_sitting">is sitting</string>
    <string name="from">from</string>
    <string name="to">to</string>
    <string name="name">Name</string>
    <string name="report">Report</string>
    <string name="seat_details">Seat Details</string>
    <string name="the_seat_is_available_now">The seat is available now.</string>
    <string name="the_seat_is_unavailable">The seat is unavailable.</string>
    <string name="the_seat_is_occupied_by_someone_else">The seat is occupied by someone else.</string>
    <string name="create_a_new_room">Create a new room</string>
    <string name="get">Get</string>
    <string name="done">Done</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="submit">Submit</string>
    <string name="upload">Upload</string>
    <string name="image_geo_null">Either the image or the geo can\'t be null.</string>
    <string name="order">Order</string>
    <string name="management">Management</string>
    <string name="schedule_settings">Schedule Settings</string>
    <string name="schedule">Schedule</string>
    <string name="close_allcaps">CLOSE</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thrusday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="close_on_this_day">Close on this day?</string>
    <string name="selece_open_time">Select open time</string>
    <string name="select_close_time">Select close time</string>
    <string name="select_date">Select date</string>
    <string name="scan_the_qr_code_of_the_seat">Scan the QR code of the seat</string>
    <string name="room_settings">Room Settings</string>
    <string name="new_room">New Room</string>
    <string name="geo">Geo</string>
    <string name="columns">Columns</string>
    <string name="rows">Rows</string>
    <string name="select_a_photo">Select a photo</string>
    <string name="location">Location</string>
    <string name="icon">Icon</string>
    <string name="resume_date">Resume date</string>
    <string name="violation">Violation</string>
    <string name="phone">Phone</string>
    <string name="username">Username</string>
    <string name="role">Role</string>
    <string name="you_are_trying_to_finish_the_order">You are trying to finish the order.</string>
    <string name="real_name">Real Name</string>
    <string name="address">Address</string>
    <string name="apply">Apply</string>
    <string name="nickname">Nickname</string>
    <string name="message">Message</string>
    <string name="image">Image</string>
    <string name="reason">Reason</string>
    <string name="application_form">Application Form</string>
    <string name="you_have_been_applying">You\'ve been applying.</string>
    <string name="the_contents_cant_be_null">The contents can\'t be null.</string>
    <string name="your_application_has_been_sent">Your application has been sent.</string>
    <string name="applicant">Applicant</string>
    <string name="approve">Approve</string>
    <string name="disapprove">Disapprove</string>
    <string name="application_check">Application Check</string>
    <string name="applying_to_be_a_manager">Applying to be a manager</string>
    <string name="applying_to_create_a_new_room">Applying to create a new room</string>
    <string name="is_occupying">is occupying.</string>
    <string name="enabled">Enabled</string>
    <string name="location_permission_needed">Location permission needed for core functionality</string>
    <string name="confirm">Confirm</string>
    <string name="manage_page">Manage Page</string>
    <string name="todo">Todo</string>
    <string name="room">Room</string>
    <string name="user">User</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="new_seat">New Seat</string>
    <string name="environment">Environment</string>
    <string name="rating">Rating</string>
    <string name="facility">Facility</string>
    <string name="service">Service</string>
    <string name="comments">Comments</string>
    <string name="no_comments">No comments</string>
    <string name="code_sent">The varification code has been sent</string>
    <string name="the_phone_number_cant_be_null">The phone number can\'t be null</string>
    <string name="nice_to_meet_you">Nice to meet you.</string>
</resources>